# Planwise

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  compile_requirements.sh  pyproject.toml  requirements.txt  setup.sh  streamlit_app.py
.github/: FUNDING.yml
docs/: index.md
src/planwise/: __init__.py  cli.py  config.py  core.py  databases.py  ni.py  plotting.py  profile.py  tax.py
src/planwise/data/: limits.json  ni_bands.json  state_pension.json  tax_bands.json
src/planwise/streamlit/: default_state.py  post_retirement_analysis.py  pre_retirement_analysis.py  profiles_manager.py  salary_analysis.py  sidebar.py  sidebar_utils.py
tests/: __init__.py  test_cli.py  test_core.py  test_databases.py  test_ni.py  test_plotting.py  test_profile.py  test_streamlit_app.py  test_tax.py
